#001: resolved ES Module issue

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,9 @@
     "incremental": true,
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "baseUrl": "http://localhost:3000",
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "e2e/cypress.config.ts"],
   "exclude": ["node_modules", "e2e"]
 }
