#007: resolved issues with ES Module conflicts

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,4 @@ jobs:
         with:
           build: npm run build
           start: npm start
-          broswer: chrome
+          browser: chrome
