--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     },
     "baseUrl": "http://localhost:3000",
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "e2e/cypress.config.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.js", "**/*.cjs"],
   "exclude": ["node_modules", "e2e"]
 }
