--- a/e2e/package.json
+++ b/e2e/package.json
@@ -18,5 +18,10 @@
   "dependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^22.0.1",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.4"
+  },
+  "engines": {
+    "pnpm": ">=9.0.0 <11.0.0",
+    "npm": ">=10.0.0 <11.0.0",
+    "node": ">=22.0.0 <23.0.0"
   }
 }
