--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
     "postcss": "8.4.32",
     "tailwindcss": "3.3.6",
     "typescript": "5"
+  },
+  "engines": {
+    "pnpm": ">=9.0.0 <11.0.0",
+    "npm": ">=10.0.0 <11.0.0",
+    "node": ">=22.0.0 <23.0.0"
   }
 }
