--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,12 @@
-name: Cypress Tests
-
-on: push
-
+name: E2E on Chrome
+on: [push]
 jobs:
   cypress-run:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-16.04
+    # let's make sure our tests pass on Chrome browser
+    name: E2E on Chrome
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      # Install npm dependencies, cache them correctly
-      # and run all Cypress tests
-      - name: Cypress run
-        uses: cypress-io/github-action@v6
+      - uses: actions/checkout@v1
+      - uses: cypress-io/github-action@v2
         with:
-          build: npm run build
-          start: npm --version
           browser: chrome
