#016: updated imported module path in _app.tsx by removing the @/ and changed to ../

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,5 @@ jobs:
         with:
           install-command: npm install
           build: npm run build
-          start: npm --version
+          start: npm start
           browser: chrome
